Commit from TeleportHQ

--- a/src/views/landingdupe.css
+++ b/src/views/landingdupe.css
@@ -20,7 +20,6 @@
 }
 .landingdupe-text {
   color: rgba(240, 152, 198, 1);
-  text-shadow: -10px -10px rgba(254, 219, 29, 1), 10px 10px black;
   height: auto;
   font-size: 200px;
   align-self: stretch;
@@ -34,7 +33,6 @@
 }
 .landingdupe-text02 {
   color: rgb(240, 152, 198);
-  text-shadow: -10px -10px rgba(254, 219, 29, 1), 10px 10px black;
   height: auto;
   font-size: 96px;
   align-self: stretch;
@@ -49,7 +47,6 @@
 }
 .landingdupe-text03 {
   color: rgb(254, 219, 29);
-  text-shadow: 5px 5px black;
   height: auto;
   font-size: 48px;
   align-self: stretch;
@@ -71,6 +68,7 @@
   align-items: center;
   border-radius: 100px;
   flex-direction: column;
+  text-decoration: none;
   background-color: rgba(254, 219, 29, 1);
 }
 .landingdupe-button:hover {
@@ -98,7 +96,7 @@
   display: flex;
   padding: 50px;
   align-self: stretch;
-  box-shadow: -10px -10px rgba(254, 219, 29, 1), 10px 10px black;
+  box-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
   align-items: flex-start;
   border-radius: 100px;
   flex-direction: column;
@@ -106,7 +104,6 @@
 }
 .landingdupe-text05 {
   color: rgb(240, 152, 198);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 64px;
   align-self: stretch;
@@ -144,7 +141,7 @@
   display: flex;
   padding: 50px;
   align-self: stretch;
-  box-shadow: -10px -10px rgba(254, 219, 29, 1), 10px 10px black;
+  box-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
   align-items: flex-start;
   border-radius: 100px;
   flex-direction: column;
@@ -152,7 +149,6 @@
 }
 .landingdupe-text10 {
   color: rgb(240, 152, 198);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 64px;
   align-self: stretch;
@@ -210,7 +206,7 @@
   display: flex;
   padding: 50px;
   align-self: stretch;
-  box-shadow: -10px -10px rgba(254, 219, 29, 1), 10px 10px black;
+  box-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
   align-items: flex-start;
   border-radius: 100px;
   flex-direction: column;
@@ -218,7 +214,6 @@
 }
 .landingdupe-text18 {
   color: rgb(240, 152, 198);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 64px;
   align-self: stretch;
@@ -256,7 +251,7 @@
   display: flex;
   padding: 50px;
   align-self: stretch;
-  box-shadow: -10px -10px rgba(254, 219, 29, 1), 10px 10px black;
+  box-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
   align-items: flex-start;
   border-radius: 100px;
   flex-direction: column;
@@ -264,7 +259,6 @@
 }
 .landingdupe-text22 {
   color: rgb(240, 152, 198);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 64px;
   align-self: stretch;
@@ -302,7 +296,7 @@
   display: flex;
   padding: 50px;
   align-self: stretch;
-  box-shadow: -10px -10px rgba(254, 219, 29, 1), 10px 10px black;
+  box-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
   align-items: flex-start;
   border-radius: 100px;
   flex-direction: column;
@@ -310,7 +304,6 @@
 }
 .landingdupe-text26 {
   color: rgb(240, 152, 198);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 64px;
   align-self: stretch;
@@ -368,7 +361,7 @@
   display: flex;
   padding: 50px;
   align-self: stretch;
-  box-shadow: -10px -10px rgba(254, 219, 29, 1), 10px 10px black;
+  box-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
   align-items: flex-start;
   border-radius: 100px;
   flex-direction: column;
@@ -376,7 +369,6 @@
 }
 .landingdupe-text34 {
   color: rgb(240, 152, 198);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 64px;
   align-self: stretch;
@@ -434,7 +426,7 @@
   display: flex;
   padding: 50px;
   align-self: stretch;
-  box-shadow: -10px -10px rgba(254, 219, 29, 1), 10px 10px black;
+  box-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
   align-items: flex-start;
   border-radius: 100px;
   flex-direction: column;
@@ -442,7 +434,6 @@
 }
 .landingdupe-text42 {
   color: rgb(240, 152, 198);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 64px;
   align-self: stretch;
@@ -484,7 +475,7 @@
   display: flex;
   padding: 50px;
   align-self: stretch;
-  box-shadow: -10px -10px rgba(254, 219, 29, 1), 10px 10px black;
+  box-shadow: -10px -10px 0px 0px rgba(254, 219, 29, 1) ;
   align-items: flex-start;
   border-radius: 100px;
   flex-direction: column;
@@ -492,7 +483,6 @@
 }
 .landingdupe-text47 {
   color: rgba(240, 152, 198, 1);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 96px;
   align-self: stretch;
@@ -513,7 +503,6 @@
 }
 .landingdupe-text49 {
   color: rgba(240, 152, 198, 1);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 96px;
   align-self: stretch;
@@ -534,7 +523,6 @@
 }
 .landingdupe-text50 {
   color: rgba(240, 152, 198, 1);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 96px;
   align-self: stretch;
@@ -555,7 +543,6 @@
 }
 .landingdupe-text52 {
   color: rgba(240, 152, 198, 1);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 96px;
   align-self: stretch;
@@ -576,7 +563,6 @@
 }
 .landingdupe-text54 {
   color: rgba(240, 152, 198, 1);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 96px;
   align-self: stretch;
@@ -597,7 +583,6 @@
 }
 .landingdupe-text56 {
   color: rgba(240, 152, 198, 1);
-  text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
   height: auto;
   font-size: 96px;
   align-self: stretch;
@@ -622,7 +607,6 @@
   }
   .landingdupe-text02 {
     color: rgb(240, 152, 198);
-    text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
     font-size: 50px;
     font-family: Poppins;
     font-weight: 900;
@@ -686,7 +670,6 @@
   }
   .landingdupe-text49 {
     color: rgb(240, 152, 198);
-    text-shadow: -5px -5px rgba(254, 219, 29, 1), 5px 5px black;
     font-size: 40px;
     font-family: Poppins;
     font-weight: 900;
